--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular-route": "^1.6.1",
-    "bootstrap": "^3.3.7"
+    "angular-route": "^1.5.5",
+    "angular-ui-router": "^0.2.18",
+    "angular": "^1.5.5",
+    "bootstrap": "^3.3.6"
   }
 }
